--- a/facts/step1/allCardsFromUntappedGg.json
+++ b/facts/step1/allCardsFromUntappedGg.json
@@ -559,10 +559,10 @@
     "id": 25,
     "defId": "Blink",
     "cost": 5,
-    "power": 6,
+    "power": 7,
     "name": "Blink",
     "description": "<b>On Reveal:</b> Swap the last card you played with a higher-Cost card\nfrom your deck.",
-    "series": 0,
+    "series": 9,
     "artists": [
       {
         "name": "Ivan Shavrin",
@@ -574,7 +574,8 @@
       }
     ],
     "seriesStartTimestamps": [1715040000000, 1717459200000],
-    "possibleSeries": 8
+    "possibleSeries": 8,
+    "collectible": true
   },
   {
     "id": 26,
@@ -1042,7 +1043,7 @@
     "id": 46,
     "defId": "Darkhawk",
     "cost": 5,
-    "power": 4,
+    "power": 3,
     "name": "Darkhawk",
     "description": "<b>Ongoing:</b> +2 Power for each card in your opponent's deck.",
     "attributes": {
@@ -1417,7 +1418,7 @@
     "id": 62,
     "defId": "Drone",
     "cost": 1,
-    "power": 1,
+    "power": 2,
     "name": "Drone",
     "description": "<i>\"zzzzzzZZZTT!\"</i>",
     "series": 0,
@@ -1854,10 +1855,16 @@
   {
     "id": 82,
     "defId": "Gwenpool",
-    "cost": 2,
-    "power": 1,
+    "cost": 4,
+    "power": 6,
     "name": "Gwenpool",
-    "description": "<b>On Reveal:</b> Double this card's Power.",
+    "description": "<b>On Reveal:</b> Pick a random card in your hand 3 times. Give +2 Power each time.",
+    "attributes": {
+      "data": {
+        "ModifiedCardCount": 3,
+        "AddedPower": 2
+      }
+    },
     "series": 0,
     "artists": [
       {
@@ -1869,7 +1876,8 @@
         "type": 4
       }
     ],
-    "seriesStartTimestamps": []
+    "seriesStartTimestamps": [1720483200000, 1722902400000],
+    "possibleSeries": 8
   },
   {
     "id": 83,
@@ -2274,7 +2282,7 @@
     "id": 101,
     "defId": "JaneFoster",
     "cost": 5,
-    "power": 8,
+    "power": 9,
     "name": "Jane Foster Mighty Thor",
     "description": "<b>On Reveal:</b> Draw all cards that Cost 0 from your deck.",
     "attributes": {
@@ -2300,7 +2308,7 @@
     "id": 102,
     "defId": "JeanGrey",
     "cost": 3,
-    "power": 3,
+    "power": 4,
     "name": "Jean Grey",
     "description": "<b>Ongoing:</b> Players must play their first card here each turn. <i>(if possible)</i>",
     "series": 8,
@@ -2554,10 +2562,10 @@
     "cost": 5,
     "power": 4,
     "name": "Klaw",
-    "description": "<b>Ongoing:</b> The location to the right has +6 Power.",
+    "description": "<b>Ongoing:</b> The location to the right has +8 Power.",
     "attributes": {
       "data": {
-        "AddedPower": 6
+        "AddedPower": 8
       }
     },
     "series": 4,
@@ -2630,7 +2638,7 @@
     "id": 116,
     "defId": "LadyDeathstrike",
     "cost": 5,
-    "power": 7,
+    "power": 6,
     "name": "Lady Deathstrike",
     "description": "<b>On Reveal:</b> Destroy each card here with 3 or less Power.",
     "attributes": {
@@ -2693,8 +2701,8 @@
   {
     "id": 119,
     "defId": "Leech",
-    "cost": 5,
-    "power": 3,
+    "cost": 4,
+    "power": 2,
     "name": "Leech",
     "description": "<b>On Reveal:</b> Remove the text from cards with <b>On Reveal</b> abilities in\nyour opponent's hand.",
     "series": 5,
@@ -2919,7 +2927,7 @@
   {
     "id": 129,
     "defId": "Mantis",
-    "cost": 2,
+    "cost": 1,
     "power": 2,
     "name": "Mantis",
     "description": "<b>On Reveal:</b> If your opponent played any cards here this turn, copy one of them into your hand.",
@@ -4003,7 +4011,7 @@
     "id": 175,
     "defId": "Psylocke",
     "cost": 2,
-    "power": 1,
+    "power": 2,
     "name": "Psylocke",
     "description": "<b>On Reveal:</b> Next turn, you get +1 Energy.",
     "attributes": {
@@ -4455,7 +4463,7 @@
     "id": 195,
     "defId": "Sauron",
     "cost": 3,
-    "power": 2,
+    "power": 3,
     "name": "Sauron",
     "description": "<b>On Reveal:</b> Remove the abilities from all <b>Ongoing</b> cards in your\nhand and deck.",
     "series": 6,
@@ -5645,7 +5653,7 @@
     "cost": 6,
     "power": 8,
     "name": "Ultron",
-    "description": "<b>On Reveal:</b> Deploy four 1-Power Drones to each other location.",
+    "description": "<b>On Reveal:</b> Deploy four 2-Power Drones to each other location.",
     "attributes": {
       "data": {
         "TokenCount": 4
@@ -6325,7 +6333,7 @@
     "id": 279,
     "defId": "Stature",
     "cost": 5,
-    "power": 6,
+    "power": 7,
     "name": "Stature",
     "description": "Costs 1 if your opponent discarded a card this game.",
     "attributes": {
@@ -6451,7 +6459,7 @@
     "description": "At the start of the game, unlock the potential of your cards with no abilities.",
     "attributes": {
       "cards": {
-        "Card_Related": [338, 339, 340, 341, 342, 343, 344]
+        "Card_Related": [343, 344, 345, 346, 347, 348, 349]
       }
     },
     "series": 8,
@@ -6765,7 +6773,7 @@
     "description": "<b>On Reveal:</b> After you play your next card, cast a spell. <i>(The spell\nchanges each turn.)</i>",
     "attributes": {
       "cards": {
-        "Card_Related": [345, 346, 347, 348, 349, 350, 351]
+        "Card_Related": [350, 351, 352, 353, 354, 355, 356]
       }
     },
     "series": 8,
@@ -7380,7 +7388,7 @@
     "power": 5,
     "name": "Baron Zemo",
     "description": "<b>On Reveal:</b> Recruit the lowest-Cost card from your opponent's deck to your side of this location.",
-    "series": 9,
+    "series": 8,
     "artists": [
       {
         "name": "Eduardo Mello",
@@ -7392,14 +7400,13 @@
       }
     ],
     "seriesStartTimestamps": [1712016000000, 1715040000000],
-    "possibleSeries": 8,
     "collectible": true
   },
   {
     "id": 324,
     "defId": "RedHulk",
     "cost": 6,
-    "power": 11,
+    "power": 9,
     "name": "Red Hulk",
     "description": "When your opponent ends a turn with unspent Energy, +4 Power.\n<i>(if in hand or in play)</i>",
     "attributes": {
@@ -7427,13 +7434,13 @@
     "cost": 2,
     "power": 3,
     "name": "U.S. Agent",
-    "description": "<b>Ongoing:</b> 4, 5, and 6-Cost cards here have -3 Power.",
+    "description": "<b>Ongoing:</b> 4, 5, and 6-Cost cards here have -4 Power.",
     "attributes": {
       "data": {
         "TargetCardCost_1": 4,
         "TargetCardCost_2": 5,
         "TargetCardCost_3": 6,
-        "ReducedPower": 3
+        "ReducedPower": 4
       }
     },
     "series": 8,
@@ -7515,7 +7522,7 @@
         "ReducedPower": 3
       }
     },
-    "series": 0,
+    "series": 8,
     "artists": [
       {
         "name": "Eduardo Mello",
@@ -7527,7 +7534,6 @@
       }
     ],
     "seriesStartTimestamps": [1714435200000],
-    "possibleSeries": 8,
     "collectible": true
   },
   {
@@ -7537,7 +7543,7 @@
     "power": 5,
     "name": "Nocturne",
     "description": "You can move this once. When this moves, replace its location with a random new one.",
-    "series": 0,
+    "series": 8,
     "artists": [
       {
         "name": "Eduardo Mello",
@@ -7549,13 +7555,13 @@
       }
     ],
     "seriesStartTimestamps": [1715040000000],
-    "possibleSeries": 8
+    "collectible": true
   },
   {
     "id": 330,
     "defId": "Sage",
-    "cost": 4,
-    "power": 1,
+    "cost": 3,
+    "power": 0,
     "name": "Sage",
     "description": "<b>On Reveal:</b> +2 Power for each different Power among all\nother cards here.",
     "attributes": {
@@ -7563,7 +7569,7 @@
         "AddedPower": 2
       }
     },
-    "series": 0,
+    "series": 8,
     "artists": [
       {
         "name": "Eduardo Mello",
@@ -7575,7 +7581,7 @@
       }
     ],
     "seriesStartTimestamps": [1715644800000],
-    "possibleSeries": 8
+    "collectible": true
   },
   {
     "id": 331,
@@ -7607,7 +7613,7 @@
     "id": 332,
     "defId": "Namora",
     "cost": 5,
-    "power": 5,
+    "power": 6,
     "name": "Namora",
     "description": "<b>On Reveal:</b> Give +5 Power to each of your cards alone at another location.",
     "attributes": {
@@ -7627,7 +7633,8 @@
       }
     ],
     "seriesStartTimestamps": [1716249600000],
-    "possibleSeries": 8
+    "possibleSeries": 8,
+    "collectible": true
   },
   {
     "id": 333,
@@ -7660,12 +7667,12 @@
     "id": 334,
     "defId": "Gilgamesh",
     "cost": 5,
-    "power": 2,
+    "power": 7,
     "name": "Gilgamesh",
-    "description": "<b>On Reveal:</b> +2 Power for each of your other cards in play with increased Power.",
+    "description": "<b>On Reveal:</b> +1 Power for each of your other cards in play with increased Power.",
     "attributes": {
       "data": {
-        "AddedPower": 2
+        "AddedPower": 1
       }
     },
     "series": 0,
@@ -7764,6 +7771,75 @@
   },
   {
     "id": 338,
+    "defId": "Copycat",
+    "cost": 3,
+    "power": 5,
+    "name": "Copycat",
+    "description": "When you draw this, steal the text from the bottom card of your\nopponent's deck.",
+    "series": 0,
+    "artists": [],
+    "seriesStartTimestamps": [1721692800000],
+    "possibleSeries": 8
+  },
+  {
+    "id": 339,
+    "defId": "HydraBob",
+    "cost": 2,
+    "power": 5,
+    "name": "Bob from Hydra",
+    "description": "After each turn, move to another location if you're losing here.",
+    "series": 0,
+    "artists": [],
+    "seriesStartTimestamps": [1720483200000],
+    "possibleSeries": 8
+  },
+  {
+    "id": 340,
+    "defId": "Ajax",
+    "cost": 4,
+    "power": 4,
+    "name": "Ajax",
+    "description": "<b>Ongoing:</b> +1 Power for each card in play afflicted with negative Power.",
+    "attributes": {
+      "data": {
+        "AddedPower": 1
+      }
+    },
+    "series": 0,
+    "artists": [],
+    "seriesStartTimestamps": [1721088000000],
+    "possibleSeries": 8
+  },
+  {
+    "id": 341,
+    "defId": "CassandraNova",
+    "cost": 3,
+    "power": 1,
+    "name": "Cassandra Nova",
+    "description": "<b>On Reveal:</b> Drain 1 Power from each card in your opponent's deck.",
+    "attributes": {
+      "data": {
+        "AddedPower": 1
+      }
+    },
+    "series": 0,
+    "artists": [],
+    "seriesStartTimestamps": [1722297600000],
+    "possibleSeries": 8
+  },
+  {
+    "id": 342,
+    "defId": "Chimichanga",
+    "cost": 0,
+    "power": 2,
+    "name": "Chimichanga",
+    "description": "<b>On Reveal:</b> Merge this with one of your cards here.",
+    "series": 0,
+    "artists": [],
+    "seriesStartTimestamps": []
+  },
+  {
+    "id": 343,
     "defId": "EvolvedWasp",
     "cost": 0,
     "power": 1,
@@ -7779,7 +7855,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 339,
+    "id": 344,
     "defId": "EvolvedMistyKnight",
     "cost": 1,
     "power": 2,
@@ -7795,7 +7871,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 340,
+    "id": 345,
     "defId": "EvolvedShocker",
     "cost": 2,
     "power": 3,
@@ -7811,7 +7887,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 341,
+    "id": 346,
     "defId": "EvolvedCyclops",
     "cost": 3,
     "power": 4,
@@ -7828,7 +7904,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 342,
+    "id": 347,
     "defId": "EvolvedTheThing",
     "cost": 4,
     "power": 6,
@@ -7845,7 +7921,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 343,
+    "id": 348,
     "defId": "EvolvedAbomination",
     "cost": 5,
     "power": 9,
@@ -7861,7 +7937,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 344,
+    "id": 349,
     "defId": "EvolvedHulk",
     "cost": 6,
     "power": 12,
@@ -7877,7 +7953,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 345,
+    "id": 350,
     "defId": "Spell01NicoMinoru",
     "cost": 1,
     "power": 2,
@@ -7886,7 +7962,7 @@
     "attributes": {
       "cards": {
         "Card_Token": [52],
-        "Card_Related": [346, 347, 348, 349, 350, 351]
+        "Card_Related": [351, 352, 353, 354, 355, 356]
       }
     },
     "series": 0,
@@ -7894,7 +7970,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 346,
+    "id": 351,
     "defId": "Spell02NicoMinoru",
     "cost": 1,
     "power": 2,
@@ -7902,7 +7978,7 @@
     "description": "<b>On Reveal:</b> After you play your next card, destroy it to draw two cards.",
     "attributes": {
       "cards": {
-        "Card_Related": [345, 347, 348, 349, 350, 351]
+        "Card_Related": [350, 352, 353, 354, 355, 356]
       }
     },
     "series": 0,
@@ -7910,7 +7986,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 347,
+    "id": 352,
     "defId": "Spell03NicoMinoru",
     "cost": 1,
     "power": 2,
@@ -7918,7 +7994,7 @@
     "description": "<b>On Reveal:</b> After you play your next card, move it one location to the right.",
     "attributes": {
       "cards": {
-        "Card_Related": [345, 346, 348, 349, 350, 351]
+        "Card_Related": [350, 351, 353, 354, 355, 356]
       }
     },
     "series": 0,
@@ -7926,7 +8002,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 348,
+    "id": 353,
     "defId": "Spell04NicoMinoru",
     "cost": 1,
     "power": 2,
@@ -7937,7 +8013,7 @@
         "AddedPower": 2
       },
       "cards": {
-        "Card_Related": [345, 346, 347, 349, 350, 351]
+        "Card_Related": [350, 351, 352, 354, 355, 356]
       }
     },
     "series": 0,
@@ -7945,7 +8021,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 349,
+    "id": 354,
     "defId": "Spell05NicoMinoru",
     "cost": 1,
     "power": 2,
@@ -7953,7 +8029,7 @@
     "description": "<b>On Reveal:</b> After you play your next card, replace that card's location.",
     "attributes": {
       "cards": {
-        "Card_Related": [345, 346, 347, 348, 350, 351]
+        "Card_Related": [350, 351, 352, 353, 355, 356]
       }
     },
     "series": 0,
@@ -7961,7 +8037,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 350,
+    "id": 355,
     "defId": "Spell06NicoMinoru",
     "cost": 1,
     "power": 2,
@@ -7969,7 +8045,7 @@
     "description": "<b>On Reveal:</b> After you play your next card, add a copy of it to your hand.",
     "attributes": {
       "cards": {
-        "Card_Related": [345, 346, 347, 348, 349, 351]
+        "Card_Related": [350, 351, 352, 353, 354, 356]
       }
     },
     "series": 0,
@@ -7977,7 +8053,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 351,
+    "id": 356,
     "defId": "Spell07NicoMinoru",
     "cost": 1,
     "power": 2,
@@ -7985,7 +8061,7 @@
     "description": "<b>On Reveal:</b> After you play your next card, double this card's Power.",
     "attributes": {
       "cards": {
-        "Card_Related": [345, 346, 347, 348, 349, 350]
+        "Card_Related": [350, 351, 352, 353, 354, 355]
       }
     },
     "series": 0,
