add characters from the Eternals

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,7 @@
     "Kraven",
     "Lionsgate",
     "Magik",
+    "Makkari",
     "marvelsnap",
     "marvelsnapzone",
     "Maximus",
@@ -81,6 +82,7 @@
     "Ronan",
     "Sabretooth",
     "Sauron",
+    "Sersi",
     "Shuri",
     "Skaar",
     "Skrull",
@@ -88,6 +90,7 @@
     "spiderman",
     "Stegron",
     "Thanos",
+    "Thena",
     "Uatu",
     "Ultron",
     "Valentina",
